# autonomous-research-engineer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
plans/: 2026-02-27_1832_phase0_implementation.md  2026-02-27_2011_phase1_comprehension_pipeline_plan.md  2026-02-27_2041_phase2_innovation_classifier_plan.md  2026-02-27_2118_phase3_feasibility_gate_plan.md  2026-02-27_2118_phase4_blueprint_translator_plan.md  2026-02-27_2157_phase5_calibration_plan.md  2026-02-28_1625_phase7_video_pipeline_plan.md  2026-02-28_2207_phase6_integration_plan.md
research_engineer/: __init__.py
research_engineer/calibration/: __init__.py  heuristic_evolver.py  maturity_assessor.py  report.py  tracker.py
research_engineer/classifier/: __init__.py  confidence.py  heuristics.py  seed_artifact.py  types.py
research_engineer/comprehension/: __init__.py  parser.py  schema.py  topology.py  vocabulary.py
research_engineer/feasibility/: __init__.py  blast_radius.py  dependency_graph.py  gate.py  manifest_checker.py  test_coverage.py
research_engineer/integration/: __init__.py  adapter.py  batch_pipeline.py  manifest_freshness.py  video_adapter.py  video_comprehension.py
research_engineer/translator/: __init__.py  change_patterns.py  manifest_targeter.py  serializer.py  translator.py  wu_decomposer.py
scripts/: build_dep_graph.py  calibration_report.py  check_clearinghouse.py  check_feasibility.py  evaluate_paper.py
tests/: conftest.py  test_foundation.py
tests/test_calibration/: test_cli.py  test_heuristic_evolver.py  test_maturity_assessor.py  test_report.py  test_tracker.py
(+46 files in other folders)
